[gd_scene load_steps=2 format=3 uid="uid://8vwoyuirtr0i"]

[ext_resource type="Script" path="res://Attack/attack_launcher.gd" id="1_l8rtr"]

[node name="AttackLauncher" type="Node2D"]
script = ExtResource("1_l8rtr")

[node name="LaunchedAttacks" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="LaunchTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.8
autostart = true

[node name="ChainTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="LaunchTimer" to="." method="_on_launch_timer_timeout"]
[connection signal="timeout" from="ChainTimer" to="." method="_on_chain_timer_timeout"]
